2011-11-01    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.__init__): Added group
	support. It can be set at initialization and run time with a new
	change_group method.

2011-10-31    <zag@manzanillo>

	* galaxy/tools/VL/importer/data_sample.xml: It could happen that
	physicalLocation is None. 

	* bl/vl/kb/drivers/omero/genotyping.py
	(GenotypingAdapter.get_snp_markers_by_source): added a new
	markers list query method.

2011-10-28    <zag@manzanillo>

	* bl/vl/app/kb_query/map_vid.py
	(MapVIDApp.resolve_mapping_individual): Changed 
	behavior: it will skip records that cannot map.

2011-10-28    <simleo@neuron.crs4.it>

	* bl/vl/app/importer/marker_definition.py (Recorder.record):
	manufacturer's label is now treated as the unique marker row
	attribute.

	* bl/vl/app/kb_query/map_vid.py
	(MapVIDApp.resolve_mapping_marker): changed back to expect chip
	manufacturer's labels instead of rs_labels for mapping to VIDs.

2011-10-25    <simleo@neuron.crs4.it>

	* bl/vl/app/importer/marker_definition.py (Recorder.record): added
	check for known markers; changed to save manufacturer's SNP label
	when there is no rs label and original mask when it can't be
	converted to top.

2011-10-15    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/proxy_core.py (ProxyCore.reload_object):
	Added support for deep reload. Untested.

	* bl/vl/app/importer/data_sample.py
	(Recorder.do_consistency_checks): Added a missing safety check.

2011-10-03    <zag@manzanillo>

	* models/actions.ome.xml: Added GenotypingProgram as a clean way
	to automatize the attaching of a SnpMarkersSet to GenotypeDataSample.

2011-10-02    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.update_snp_positions):
	Now we use slice here too.

2011-10-01    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/proxy_core.py (ProxyCore.get_table_rows):
	Now we use slice and we allow for column selection.

2011-09-28    <zag@manzanillo>
